@@ -12,6 +12,8 @@ import com.bottari.domain.BottariTemplateItem;
 import com.bottari.domain.Member;
 import com.bottari.dto.CreateBottariTemplateRequest;
 import com.bottari.dto.ReadBottariTemplateResponse;
+import com.bottari.dto.ReadNextBottariTemplateRequest;
+import com.bottari.dto.ReadNextBottariTemplateResponse;
 import jakarta.persistence.EntityManager;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
@@ -105,15 +107,15 @@ class BottariTemplateServiceTest {
 
         // then
         assertAll(() -> {
-                      assertThat(actual).hasSize(2);
-                      assertThat(actual.get(0).title()).isEqualTo("A_template2");
-                      assertThat(actual.get(0).items()).hasSize(1);
-                      assertThat(actual.get(0).items().getFirst().name()).isEqualTo("item_3");
-                      assertThat(actual.get(1).title()).isEqualTo("A_template1");
-                      assertThat(actual.get(1).items()).hasSize(2);
-                      assertThat(actual.get(1).items().get(0).name()).isEqualTo("item_1");
-                      assertThat(actual.get(1).items().get(1).name()).isEqualTo("item_2");
-                  }
+                    assertThat(actual).hasSize(2);
+                    assertThat(actual.get(0).title()).isEqualTo("A_template2");
+                    assertThat(actual.get(0).items()).hasSize(1);
+                    assertThat(actual.get(0).items().getFirst().name()).isEqualTo("item_3");
+                    assertThat(actual.get(1).title()).isEqualTo("A_template1");
+                    assertThat(actual.get(1).items()).hasSize(2);
+                    assertThat(actual.get(1).items().get(0).name()).isEqualTo("item_1");
+                    assertThat(actual.get(1).items().get(1).name()).isEqualTo("item_2");
+                }
         );
     }
 
@@ -416,5 +418,137 @@ class BottariTemplateServiceTest {
         assertThatThrownBy(() -> bottariTemplateService.deleteById(bottariTemplate.getId(), anotherSsaid))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessage("본인의 보따리 템플릿이 아닙니다.");
+    }
+
+
+    @DisplayName("createdAt 기준으로 다음 페이지 템플릿 목록을 조회한다.")
+    @Test
+    void getNextAll_ByCreatedAt() {
+        // given
+        final Member member = new Member("ssaid", "name");
+        entityManager.persist(member);
+
+        final BottariTemplate template1 = new BottariTemplate("template1", member);
+        final BottariTemplate template2 = new BottariTemplate("template2", member);
+        final BottariTemplate template3 = new BottariTemplate("template3", member);
+        entityManager.persist(template1);
+        entityManager.persist(template2);
+        entityManager.persist(template3);
+
+        final BottariTemplateItem item1 = new BottariTemplateItem("item1", template1);
+        final BottariTemplateItem item2 = new BottariTemplateItem("item2", template2);
+        final BottariTemplateItem item3 = new BottariTemplateItem("item3", template3);
+        entityManager.persist(item1);
+        entityManager.persist(item2);
+        entityManager.persist(item3);
+
+        final ReadNextBottariTemplateRequest request = new ReadNextBottariTemplateRequest(
+                "",
+                null,
+                null,
+                0,
+                2,
+                "createdAt"
+        );
+
+        // when
+        final ReadNextBottariTemplateResponse actual = bottariTemplateService.getNextAll(request);
+
+        // then
+        assertAll(
+                () -> assertThat(actual.contents()).hasSize(2),
+                () -> assertThat(actual.currentPage()).isEqualTo(0),
+                () -> assertThat(actual.size()).isEqualTo(2),
+                () -> assertThat(actual.hasNext()).isTrue(),
+                () -> assertThat(actual.first()).isTrue(),
+                () -> assertThat(actual.last()).isFalse(),
+                () -> assertThat(actual.lastId()).isNotNull(),
+                () -> assertThat(actual.lastInfo()).isNotNull()
+        );
+    }
+
+    @DisplayName("takenCount 기준으로 다음 페이지 템플릿 목록을 조회한다.")
+    @Test
+    void getNextAll_ByTakenCount() {
+        // given
+        final Member member = new Member("ssaid", "name");
+        entityManager.persist(member);
+
+        final BottariTemplate template1 = new BottariTemplate("template1", member);
+        final BottariTemplate template2 = new BottariTemplate("template2", member);
+        entityManager.persist(template1);
+        entityManager.persist(template2);
+
+        final BottariTemplateItem item1 = new BottariTemplateItem("item1", template1);
+        final BottariTemplateItem item2 = new BottariTemplateItem("item2", template2);
+        entityManager.persist(item1);
+        entityManager.persist(item2);
+
+        final ReadNextBottariTemplateRequest request = new ReadNextBottariTemplateRequest(
+                "",
+                null,
+                "999999",
+                0,
+                1,
+                "takenCount"
+        );
+
+        // when
+        final ReadNextBottariTemplateResponse actual = bottariTemplateService.getNextAll(request);
+
+        // then
+        assertAll(
+                () -> assertThat(actual.contents()).hasSize(1),
+                () -> assertThat(actual.currentPage()).isEqualTo(0),
+                () -> assertThat(actual.size()).isEqualTo(1),
+                () -> assertThat(actual.hasNext()).isTrue(),
+                () -> assertThat(actual.first()).isTrue(),
+                () -> assertThat(actual.last()).isFalse(),
+                () -> assertThat(actual.lastId()).isNotNull(),
+                () -> assertThat(actual.lastInfo()).isNotNull()
+        );
+    }
+
+    @DisplayName("검색어로 필터링하여 다음 페이지 템플릿 목록을 조회한다.")
+    @Test
+    void getNextAll_WithQuery() {
+        // given
+        final Member member = new Member("ssaid", "name");
+        entityManager.persist(member);
+
+        final BottariTemplate template1 = new BottariTemplate("여행용 체크리스트", member);
+        final BottariTemplate template2 = new BottariTemplate("캠핑 준비물", member);
+        final BottariTemplate template3 = new BottariTemplate("출장 체크리스트", member);
+        entityManager.persist(template1);
+        entityManager.persist(template2);
+        entityManager.persist(template3);
+
+        final BottariTemplateItem item1 = new BottariTemplateItem("여권", template1);
+        final BottariTemplateItem item2 = new BottariTemplateItem("텐트", template2);
+        final BottariTemplateItem item3 = new BottariTemplateItem("노트북", template3);
+        entityManager.persist(item1);
+        entityManager.persist(item2);
+        entityManager.persist(item3);
+
+        final ReadNextBottariTemplateRequest request = new ReadNextBottariTemplateRequest(
+                "체크리스트",
+                null,
+                null,
+                0,
+                2,
+                "createdAt"
+        );
+
+        // when
+        final ReadNextBottariTemplateResponse actual = bottariTemplateService.getNextAll(request);
+
+        // then
+        assertAll(
+                () -> assertThat(actual.contents()).hasSize(2),
+                () -> assertThat(actual.contents().get(0).title()).contains("체크리스트"),
+                () -> assertThat(actual.contents().get(1).title()).contains("체크리스트"),
+                () -> assertThat(actual.hasNext()).isFalse(),
+                () -> assertThat(actual.last()).isTrue()
+        );
     }
 }
